[package]
name = "radiopeer"
version = "0.1.0"
authors = ["E. Fynn <me@enriquefynn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.1"
libp2p = "^0.13"
clap = "^2.33"
dirs = "^2.0"
secp256k1 = {version = "^0.16", features = ["rand"]}
rand = "^0.7"